fixes spacing issues with the red text-box in inspirationday photo

--- a/style.css
+++ b/style.css
@@ -828,7 +828,7 @@ a:hover {
 #inspiration-day #pin2 {width: 100%; padding-bottom: 25em; display: flex;}
 #inspiration-day #pin1 {
     position: absolute;
-    top:20vw;
+    top:30vw;
     width: 100%;
     display: block;
     text-align: center;
